--- a/front-end/html/consultar-meu-desenho.html
+++ b/front-end/html/consultar-meu-desenho.html
@@ -50,7 +50,7 @@
                     <div class="description-container">
                         <h2>Descrição do desenho</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consequat felis vel arcu auctor sollicitudin. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut vel aliquam mauris, eget faucibus libero. Suspendisse nec justo mi. Sed porta ex vel dignissim ullamcorper. </p>
-                        <h2>Descrição do desenho</h2>
+                        <h2>Tipo do desenho</h2>
                         <p>Manga</p>
                     <div class="horizontal-line"></div>
                     <div class="action-buttons">
