remoção de comentários

--- a/front-end/html/login.html
+++ b/front-end/html/login.html
@@ -25,7 +25,7 @@
             <input type="password" id="senha" name="senha" required="">
         </div>
         <a href="#">Esqueceu sua senha?</a>
-        <input href="inicio.html" type="submit" name="" value="Entrar">
+        <a href="inicio.html"><input type="submit" name="" value="Entrar"></a>
         <a href="cadastro.html">Criar Conta</a>
         </form>
     </div>
