--- a/front-end/html/consultar-evento.html
+++ b/front-end/html/consultar-evento.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <link rel="stylesheet" href="../css/background.css">
     <link rel="stylesheet" href="../css/esqueleto.css">
-    <link rel="stylesheet" href="../css/inicio.css">
+    <link rel="stylesheet" href="../css/consultar-evento.css">
 </head>
 
 <body class="background">
@@ -41,10 +41,15 @@
                 </ul>
             </div>
             <div class="content">
-                <div class="inner-content">
-                <h2>Bem-vindo à nossa página principal!</h2>
-                <p>Aqui você encontrará todo o conteúdo do nosso site.</p>
-                </div>
+                <div class="event-container">
+                    <div class="event-info">
+                      <h2 class="event-name">Nome do Evento</h2>
+                      <p class="event-date">Data do Evento</p>
+                      <p class="event-description">Descrição do Evento</p>
+                      <p class="event-category">Categoria do Evento</p>
+                      <p class="event-year">Ano do Evento</p>
+                    </div>
+                </div>                  
             </div>
             <div class="footer">
                 <p>&copy; 2023 - Por Toda PArte</p>
@@ -53,4 +58,4 @@
     </div>
 </body>
 </html>
-
+  
