--- a/front-end/html/cadastrar-casa.html
+++ b/front-end/html/cadastrar-casa.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <link rel="stylesheet" href="../css/background.css">
     <link rel="stylesheet" href="../css/esqueleto.css">
-    <link rel="stylesheet" href="../css/inicio.css">
+    <link rel="stylesheet" href="../css/cadastrar-coisas.css">
 </head>
 
 <body class="background">
@@ -41,9 +41,31 @@
                 </ul>
             </div>
             <div class="content">
-                <div class="inner-content">
-                <h2>Bem-vindo à nossa página principal!</h2>
-                <p>Aqui você encontrará todo o conteúdo do nosso site.</p>
+                <div class="cadastro-box">
+                    <h2>Cadastro de Casas</h2>
+                    <form action="https://localhost:3001/casaartistica" method="POST">
+                      <div class="form-box">
+                        <label>Nome da casa</label>
+                        <input type="text" id="nome" name="nome" required="">
+                      </div>
+                      <div class="form-box">
+                        <label>Animal</label>
+                        <input type="text" id="animal" name="animal" required="">
+                      </div>
+                      <div class="form-box">
+                        <label>Pedra</label>
+                        <input type="text" id="pedra" name="pedra" required="">
+                      </div>
+                      <div class="form-box">
+                        <label>Flor</label>
+                        <input type="text" id="flor" name="flor" required="">
+                      </div>
+                      <div class="form-box">
+                        <label>Brasão da casa</label>
+                        <input type="file" id="brasao" name="brasao" required="">
+                      </div>
+                      <input type="submit" value="Cadastrar">
+                    </form>
                 </div>
             </div>
             <div class="footer">
@@ -53,4 +75,4 @@
     </div>
 </body>
 </html>
-
+  
