--- a/front-end/html/cadastrar-evento.html
+++ b/front-end/html/cadastrar-evento.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <link rel="stylesheet" href="../css/background.css">
     <link rel="stylesheet" href="../css/esqueleto.css">
-    <link rel="stylesheet" href="../css/inicio.css">
+    <link rel="stylesheet" href="../css/cadastrar-coisas.css">
 </head>
 
 <body class="background">
@@ -41,9 +41,31 @@
                 </ul>
             </div>
             <div class="content">
-                <div class="inner-content">
-                <h2>Bem-vindo à nossa página principal!</h2>
-                <p>Aqui você encontrará todo o conteúdo do nosso site.</p>
+                <div class="cadastro-box">
+                    <h2>Cadastro de Eventos</h2>
+                    <form action="https://localhost:3001/evento" method="POST">
+                      <div class="form-box">
+                        <label>Nome do evento</label>
+                        <input type="text" id="nome" name="nome" required="">
+                      </div>
+                      <div class="form-box">
+                        <label>Descrição</label>
+                        <input type="text" id="descricao" name="descricao" required="">
+                      </div>
+                      <div class="form-box">
+                        <label>Data</label>
+                        <input type="text" id="data" name="data" required="">
+                      </div>
+                      <div class="form-box">
+                        <label>Categoria</label>
+                        <input type="text" id="categoria" name="categoria" required="">
+                      </div>
+                      <div class="form-box">
+                        <label>Ano</label>
+                        <input type="text" id="ano" name="ano" required="">
+                      </div>
+                      <input type="submit" value="Cadastrar">
+                    </form>
                 </div>
             </div>
             <div class="footer">
@@ -53,4 +75,4 @@
     </div>
 </body>
 </html>
-
+  
