--- a/front-end/html/consultar-casa.html
+++ b/front-end/html/consultar-casa.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <link rel="stylesheet" href="../css/background.css">
     <link rel="stylesheet" href="../css/esqueleto.css">
-    <link rel="stylesheet" href="../css/inicio.css">
+    <link rel="stylesheet" href="../css/consultar-casa.css">
 </head>
 
 <body class="background">
@@ -41,10 +41,25 @@
                 </ul>
             </div>
             <div class="content">
-                <div class="inner-content">
-                <h2>Bem-vindo à nossa página principal!</h2>
-                <p>Aqui você encontrará todo o conteúdo do nosso site.</p>
-                </div>
+                <section class="casa">
+                    <div class="casa-header">
+                    <h2 class="casa-nome">Nome da Casa</h2>
+                    </div>
+                    <div class="casa-header">
+                    <img src="../imagens/logo.png" alt="Brasão da Casa" class="casa-brasao">
+                    </div>
+                    <div class="casa-info">
+                    <p><strong>Animal:</strong> Leão</p>
+                    <p><strong>Pedra:</strong> Diamante</p>
+                    <p><strong>Flor:</strong> Rosa</p>
+                    <p><strong>Medalhas:</strong></p>
+                    <ul class="casa-medalhas">
+                        <li><span class="casa-ouro">2</span> Ouro</li>
+                        <li><span class="casa-prata">4</span> Prata</li>
+                        <li><span class="casa-bronze">1</span> Bronze</li>
+                    </ul>
+                    </div>
+                </section>
             </div>
             <div class="footer">
                 <p>&copy; 2023 - Por Toda PArte</p>
@@ -53,4 +68,3 @@
     </div>
 </body>
 </html>
-
